--- a/02-CSS/homework/responsive-web/less/index.less
+++ b/02-CSS/homework/responsive-web/less/index.less
@@ -1,1 +1,14 @@
 // Importar los archivos less acá:
+//Verificar que el compilador esté funcionando correctamente, para ello colocar la propiedad `background-color` del elemento `html` a `red` en el archivo `index.less` que se encuentra dentro de la carpeta `less`. Si actualizamos ahora la página, el fondo debería haberse cambiado a rojo
+
+// En el archivo `index.less` importar el resto de los archivos `.less` en el siguiente orden:
+
+
+@import "variables";
+@import "mixins";
+@import "reset";
+@import "global";
+@import "navigation";
+@import "footer";
+@import "home-page";
+
