--- a/02-CSS/homework/responsive-web/less/mixins.less
+++ b/02-CSS/homework/responsive-web/less/mixins.less
@@ -1,1 +1,15 @@
 // Mixins acá
+
+.flex(@direccion){
+    display: flex;
+    flex-direction: @direccion;
+}
+
+.register(@bg,@width){
+    background-color: @bg;
+    width: @width;
+    color:@wild-sand;
+    font-size: 16px;
+    padding: 12px;
+    border-radius: 10px;
+}
